# brain

./: .env.example  .envrc  .gitignore  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: python-test.yml
app/: config.py  main.py
app/control/: examiner.py
app/control/post/: examiner.py  generator.py  summariser.py
app/control/pre/: generator.py  summariser.py
app/exceptions/: exception.py
app/llm/: anthropic.py  aws_bedrock.py  base.py  cohere.py  google_ai.py  llama3.py  model.py  open_ai.py
app/models/: content.py  conversation.py  infer.py  inference.py  task.py
app/process/: examiner.py  generator.py  summariser.py  types.py
app/prompts/: config.py  open_ai.py
app/prompts/examiner/: anthropic.py  cohere.py  functions.py  google_ai.py  llama3.py  open_ai.py
app/prompts/generator/: cohere.py  functions.py  google_ai.py  open_ai.py
app/prompts/summariser/: anthropic.py  cohere.py  functions.py  google_ai.py  llama3.py  open_ai.py
app/scripts/: generate.py  generate_notes.py  practice.py  summary.py
tests/: test_config.py
tests/control/post/: test_examiner.py  test_generator.py  test_summariser.py
tests/control/pre/: test_generator.py  test_summariser.py
tests/models/: test_content.py  test_conversation.py  test_inference.py  test_task.py
