[tool.poetry]
name = "brain"
version = "0.1.0"
description = ""
authors = ["jinyang628 <chenjinyang4192@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.9.4"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anthropic = "0.25.1"
anyio = "4.3.0"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
cohere = "5.2.5"
dataclasses-json = "0.6.4"
direnv = "2020.12.3"
distro = "1.9.0"
env-file = "2020.12.3"
fastapi = "0.110.0"
fastavro = "1.9.4"
filelock = "3.13.3"
frozenlist = "1.4.1"
fsspec = "2024.3.1"
google-ai-generativelanguage = "0.4.0"
google-api-core = "2.17.1"
google-auth = "2.28.2"
google-generativeai = "0.3.2"
googleapis-common-protos = "1.63.0"
grpcio = "1.62.1"
grpcio-status = "1.62.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
huggingface-hub = "0.22.2"
idna = "3.6"
iniconfig = "2.0.0"
jsonpatch = "1.33"
jsonpointer = "2.4"
langchain = "0.1.16"
langchain-community = "0.0.32"
langchain-core = "0.1.42"
langchain-google-genai = "0.0.9"
langchain-openai = "0.1.3"
langchain-text-splitters = "0.0.1"
langsmith = "0.1.24"
marshmallow = "3.21.1"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
openai = "1.17.1"
orjson = "3.9.15"
packaging = "23.2"
pathspec = "0.12.1"
platformdirs = "4.2.0"
pluggy = "1.4.0"
proto-plus = "1.23.0"
protobuf = "4.25.3"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pydantic = "2.6.3"
pydantic-core = "2.16.3"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
regex = "2023.12.25"
requests = "2.31.0"
rsa = "4.9"
safetensors = "0.4.2"
scipy = "1.13.0"
sniffio = "1.3.1"
soupsieve = "2.5"
sqlalchemy = "2.0.29"
starlette = "0.36.3"
tenacity = "8.2.3"
termcolor = "2.4.0"
tiktoken = "0.6.0"
tokenizers = "0.15.2"
tqdm = "4.66.2"
transformers = "4.39.2"
types-requests = "2.31.0.20240406"
typing-inspect = "0.9.0"
typing-extensions = "4.10.0"
urllib3 = "2.2.1"
uvicorn = "0.27.1"
values = "2020.12.3"
yarl = "1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
